--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@capacitor/android": "^2.4.5",
     "@capacitor/core": "2.4.5",
     "@capacitor/ios": "^2.4.5",
+    "@ionic/pwa-elements": "^3.0.2",
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "core-js": "^3.6.5",
