Modify capacitor config

--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,1 +1,14 @@
-{}
+{
+  "appId": "io.ionic.starter",
+  "appName": "www.laguialinux.es",
+  "bundledWebRuntime": false,
+  "npmClient": "npm",
+  "webDir": "dist",
+  "plugins": {
+    "SplashScreen": {
+      "launchShowDuration": 0
+    }
+  },
+  "cordova": {},
+  "linuxAndroidStudioPath": "/home/fryntiz/.local/bin/android_studio"
+}
